--- a/bank.html
+++ b/bank.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-slate-300">
     <header>
-        <div class="relative w-9/12 mx-auto">
+        <div class="block xl:relative w-9/12 mx-auto text-center xl:text-right">
             <div onclick="window.location.href='login.html'" class="absolute top-0 right-0 bg-teal-300 text-xl rounded-lg hover:bg-teal-600 px-4 py-2">Log out</div>
         </div>
         <h1 class="text-amber-900 text-6xl text-center my-9">Let's get some <span class="text-sky-700">Moooooney</span></h1>
